--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "singleAttributePerLine": true,
   "trailingComma": "none",
   "tabWidth": 2,
-  "singleQuote": false,
-  "enOfLine": "crlf"
+  "singleQuote": false
 }
